src/objects/pse__Project_Location__c.object
<CustomObject>
    <customHelpPage>pse__ProjectLocationHelp</customHelpPage>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Locations</relationshipLabel>
        <relationshipName>Project_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Project Location</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Check_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>pse__End_Date__c &lt; pse__Start_Date__c</errorConditionFormula>
        <errorDisplayField>pse__End_Date__c</errorDisplayField>
        <errorMessage>End date cannot occur before start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Project_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(pse__Project__c)</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>Project is required</errorMessage>
    </validationRules>
</CustomObject>